# hermes

./: .dockerignore  .rustfmt.toml  Cargo.toml  Dockerfile  README.md  local.yaml  profile.json
.sqlx/: query-dcfdfca68c86a356591fb1eac95c8f2e69e7da3ab6d5b7cafcfcdc77bd17d5d9.json  query-ecb9b5c6a60708724a697a93778e35398bbd14353e827b3a046b0dd9b1cb9620.json
src/: config.rs  db.rs  email.rs  lib.rs  main.rs  scheduler.rs  shutdown.rs
src/routes/: batch_send_email.rs  mod.rs  send_email.rs  verify_key.rs
