[package]
name = "hermes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "hermes"

[profile.profiling]
inherits = "release"
debug = true

[dependencies]
axum = "0.7.4"
lettre = { version = "0.11.4", default-features = false, features = [
  "smtp-transport",
  "tokio1-rustls-tls",
  "rustls-tls",
  "hostname",
  "builder",
  "pool",
] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sqlx = { version = "0.7.3", features = [
  "postgres",
  "macros",
  "runtime-tokio-rustls",
] }
tokio = { version = "1.36.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
